# archeo

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .zenodo.json  404.html  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  main.py  pyproject.toml  sitemap.xml
ancestral-bh/: Dockerfile  Makefile  README.md  main.yml  prior.yml  pyproject.toml
ancestral-bh/src/: env.py  main.py
ancestral-bh/src/core/: __init__.py  executor.py  math.py  utils.py
ancestral-bh/src/core/posterior/: __init__.py  sampler.py
ancestral-bh/src/core/prior/: __init__.py  binary.py  mahapatra.py  simulation.py
ancestral-bh/src/core/visualization/: __init__.py  base.py  posterior.py  prior.py
ancestral-bh/src/schemas/: __init__.py  binary.py  visualization.py
ancestral-bh/src/services/: __init__.py  facade.py  posterior.py  prior.py
ancestral-bh/src/utils/: __init__.py  binary.py  logger.py
ancestral-bh/src/visualization/: base.py  prior.py
code-overview/: index.html
src/: Makefile  README.md  env.py  main.py  main.yml  mkdocs.yml  prior.yml  pyproject.toml  requirements.txt  test.ipynb
src/archeo/: __init__.py  __main__.py  constants.py  env.py  executor.py  logger.py  main.py  schema.py  ui.py  version.py
src/archeo/bayesian/: __init__.py  ancestral_posterior.py
src/archeo/bayesian/importance_sampling/: __init__.py  bayes_factor_curve.py
src/archeo/bayesian/importance_sampling/resampler/: assume_independence.py  base.py  generic.py  interface.py
src/archeo/constants/: bayesian.py  enum.py  physics.py
src/archeo/core/: __init__.py  bayes.py  executor.py  mahapatra.py  math.py  prior.py  reweighting.py  simulator.py  utils.py
src/archeo/core/forward/: __init__.py  bayes.py  bayes_factor.py  resampler.py
src/archeo/core/forward/resampler/: __init__.py  assume_independence.py  base.py  generic.py  interface.py
src/archeo/core/posterior/: __init__.py  sampler.py
src/archeo/core/prior/: __init__.py  binary.py  mahapatra.py  simulation.py
src/archeo/core/visualization/: __init__.py  base.py  posterior.py  prior.py
src/archeo/data_structures/: annotation.py  distribution.py  math.py  visualization.py
src/archeo/data_structures/bayesian/: bayes_factor.py
src/archeo/data_structures/physics/: binary.py  black_hole.py  mahapatra.py  simulation.py
src/archeo/frontend/: app.py  viz.py
src/archeo/postprocessing/: dataframe.py  evaluation.py
src/archeo/postprocessing/eval_utils/: bias.py  kl.py
src/archeo/preset/: __init__.py  agnostic.py  agnostic_aligned.py  agnostic_precessing.py  aligned.py  aligned_spin.py  bh1g.py  cli.py  positively_aligned.py  precessing.py  quick.py
src/archeo/preset/forward/: compute_bayes_factor_curve.py
src/archeo/preset/simulation/: __init__.py  agnostic.py  n_generation.py  second_generation.py
src/archeo/schemas/: __init__.py  binary.py  common.py  visualization.py
src/archeo/services/: __init__.py  facade.py  posterior.py  prior.py
src/archeo/simulation/: simulate_merger.py
src/archeo/ui/: __init__.py  app.py  visualization.py
src/archeo/utils/: decorator.py  executor.py  file.py  fs.py  helper.py  logger.py  math.py  parallel.py
src/archeo/visualization/: __init__.py  animation.py  base.py  distribution.py  estimation.py  forward.py
src/configs/: main.yml  prior.yml
src/docs/: code-overview.md  index.md  installation.md  methodology.md  posterior-backward.md  prior-backward.md  prior-forward.md
src/docs/diagrams/: classes.mmd
src/docs/notebooks/: customize_simulation.ipynb  gw190521_2g1g.ipynb  gw190521_quick.ipynb
src/schemas/: binary.py  common.py  visualization.py
src/services/: __init__.py  posterior.py  prior.py
src/tests/ai-generated/: generation.md
src/tests/ai-generated/unit-test/: test_gap_closure_targeted.py
src/tests/ai-generated/unit-test/test_bayesian/: test_ancestral_and_importance_sampling_additional.py  test_ancestral_posterior_edge_cases.py  test_bayes_factor_curve_candidate_prior.py  test_candidate_prior_determinism_additional.py
src/tests/ai-generated/unit-test/test_constants/: test_enum_keyerror_recovery_additional.py  test_physics_and_enum_additional.py  test_physics_escape_velocity.py
src/tests/ai-generated/unit-test/test_entrypoint/: test_main_module.py
src/tests/ai-generated/unit-test/test_postprocessing/: test_dataframe_conversion_precision_additional.py  test_postprocessing_additional.py
src/tests/ai-generated/unit-test/test_preset/: test_agnostic_precession_pipeline.py  test_cli_additional_paths.py  test_cli_agnostic_precession_default.py  test_cli_second_generation_precession_default.py  test_preset_and_cli_additional.py  test_simulation_pipeline_branching_additional.py
src/tests/ai-generated/unit-test/test_simulation/: test_simulate_merger_additional.py  test_simulate_merger_core.py
src/tests/ai-generated/unit-test/test_utils/: test_fs.py  test_fs_additional_formats.py  test_fs_parallel_logger_decorator_additional.py  test_logger_file_handler.py
src/tests/ai-generated/unit-test/test_version/: test_version_fallback.py
src/tests/ai-generated/unit-test/test_visualization/: test_base_estimation_distribution_animation_additional.py  test_estimation_helpers.py  test_visualization_orchestration_additional.py
src/tests/end-to-end-test/: test_ancestral_inference.py  test_click_command.py  test_import.py  test_mahapatra_mass_fn.py  test_self_estimate.py  test_simulation.py  test_visualization.py
src/tests/profiling/: README.md  estimation.py  simulation.py
src/tests/test_data/: README.md  prior.feather  prior.json
src/tests/unit-test/: test_bayes_factor.py  test_bayes_factor_curve.py  test_get_preset_prior.py  test_sph2cart.py
src/tests/unit-test/test_bayesian/test_importance_sampling/: test_generic.py  test_paramter_independence.py
src/tests/unit-test/test_data_structures/test_distribution/: test_normal_distribution.py  test_piecewise_uniform_distribution.py  test_uniform_distribution.py
src/utils/: __init__.py  binary.py  common.py  logger.py  mahapatra.py  posterior.py
src/visualization/: __init__.py  base.py  posterior.py  prior.py
(+46 files in other folders)
