[tool.poetry]
name = "ancestral-bh"
version = "0.0.1"
description = ""
authors = ["wyhwong <wyhwong@link.cuhk.edu.hk>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
setuptools = "^68.2.2"
wheel = "^0.41.3"
gwsurrogate = "0.5.0"
surfinbh = "1.2.0"
pyyaml = "6.0.1"
p-tqdm = "1.4.0"
scipy = "1.11.1"
seaborn = "0.12.2"
numpy = "1.25.1"
pandas = "2.0.3"
matplotlib = "3.7.2"
tables = "3.8.0"
corner = "2.2.2"
jupyterlab = "4.0.3"
notebook = "7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
