[project]
name = "archeo"
version = "1.6.1"
description = "Bayesian framework for inferring natal kick, ancestral masses and spins of black holes."
authors = [
    {name = "wyhwong",email = "wyhwong@link.cuhk.edu.hk"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = ["black-holes", "gravitational-waves", "black-hole-archeology"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
requires-python = ">=3.11,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "surfinbh (>=1.2.6,<2.0.0)",
    "corner (>=2.2.3,<3.0.0)",
    "mpl-scatter-density (>=0.8,<0.9)",
    "tqdm (>=4.67.1,<5.0.0)",
    "setuptools (>=80.9.0,<81.0.0)", # For pkg_resources, which is used by mpl-scatter-density
    "gwsurrogate (>=0.8,<0.9)",
    "tabulate (>=0.9.0,<0.10.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]

[project.optional-dependencies]
ui = ["streamlit (>=1.45.1,<2.0.0)", "plotly (>=6.1.2,<7.0.0)", "nbformat (>=5.10.4,<6.0.0)"]

[project.urls]
homepage = "https://pypi.org/project/archeo/"
repository = "https://github.com/wyhwong/archeo"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
