[project]
name = "archeo"
authors = [{name = "wyhwong",email = "wyhwong@link.cuhk.edu.hk"}]
license = "MIT"
license-files = ["LICENSE"]
description = "Bayesian framework for inferring natal kick, ancestral masses and spins of black holes."
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Natural Language :: English",
    "Operating System :: OS Independent"
]
keywords = ["black-holes", "gravitational-waves", "black-hole-archeology"]
version = "2.0.0.dev2"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "click>=8.3.1",
    "corner>=2.2.3",
    "gwsurrogate==0.8.7",
    "matplotlib>=3.10.8",
    "mpl-scatter-density>=0.8",
    "numpy>=2.4.3",
    "pandas<3.0.0",
    "pydantic>=2.12.5",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "surfinbh>=1.2.7",
    "tabulate>=0.10.0",
    "tqdm>=4.67.3",
]

[project.urls]
homepage = "https://pypi.org/project/archeo/"
repository = "https://github.com/wyhwong/archeo"
documentation = "https://wyhwong.github.io/archeo/"

[dependency-groups]
dev = [
    "ipykernel>=6.9.2, <7.0.0",
    "pre-commit>=4.5.1",
    "pyarrow>=23.0.1",
    "pyinstrument>=5.1.2",
    "pylint>=4.0.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
mkdocs = [
    "mkdocs>=1.6.1, <2.0.0",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-mermaid2-plugin>=1.2.3",
]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true
lines_after_imports = 2

[tool.setuptools.packages.find]
where = ["."]
include = ["archeo*"]
exclude = ["site*", "tests*", "docs*"]
